//adding product single page

--- a/src/views/product.ejs
+++ b/src/views/product.ejs
@@ -1,11 +1,9 @@
 <html>
-  <header>product</header>
     <body>
       <div class="col-xs-12 col-sm-4 col-md-4 adj_text">
-
-        <h3><%=product.Name%></h3>
-        <p><%=product.Description%></p>
-        <img src=<%= product.Image %>  />
+       <h1>hello from single product page</h1>
+        <h3>Product Name : <%=product.Name%></h3>
+        <p> Product Description :<%=product.Description%></p>
       </div> 
     </body>
 </html>
